--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-resource": "~1.3.15",
     "angular-route": "~1.3.15",
     "fontawesome": "~4.3.0",
-    "bootstrap-material-design": "~0.3.0"
+    "bootstrap-material-design": "~0.3.0",
+    "jquery-mobile": "~1.4.5"
   },
   "private": true
 }
